# fastapi-with-async-mongodb

./: .env-example  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/user/: routers.py  schemas.py
config/: __init__.py  settings.py  urls.py
util/: serializer.py
